--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@
 #     In src/s2_put_skeleton_txts_to_a_single_txt.py,
 #     The image whose label is not in `classes` will be filtered out. 
 
-classes: ['stand', 'walk', 'run', 'jump', 'sit', 'squat', 'kick', 'punch', 'wave', 'dance']
+classes: ['dance', 'stand', 'walk', 'run', 'jump', 'sit', 'squat', 'kick', 'punch', 'wave' ]
 #classes: ['lying', 'other', 'sitting', 'standing']
 
 image_filename_format: "{:05d}.jpg"
@@ -78,3 +78,4 @@ s5_test.py:
     video_name: "video.avi" # save the resultant video to file
     video_fps: 10.0 # at what frame rate to write the output video
     skeleton_folder_name: "skeletons/"
+    human_folder_name: "humans/"
